logoutput/ping-pong-app/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-rollout
  namespace: exercises
spec:
  replicas: 4
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
      containers:
        - name: pingpong
          image: wilky2/pingpong:4.1
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
          readinessProbe:
            httpGet:
              path: /actuator/health/db
              port: 4040
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/db
              port: 4040
            initialDelaySeconds: 40
            periodSeconds: 5
            failureThreshold: 5
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: { duration: 60s }
        - analysis:
            templates:
              - templateName: pingpong-cpu-usage-check
        - setWeight: 100
